# pfo-client

./: Cargo.toml  sonar-project.properties
.github/workflows/: build.yml  sonar-scan.yml
pfo/: Cargo.toml
pfo/src/: client.rs  config.rs  macros.rs  main.rs  none_serialize.rs  output.rs  problem_detail.rs  query.rs
pfo/src/cli/: args.rs  command.rs  fund.rs  mod.rs  portfolio.rs  sort.rs
pfo/src/cli/commands/: fund.rs  portfolio.rs
pfo/src/client/: mod.rs
pfo/src/client/endpoints/: fund.rs
pfo/src/client/models/: fund.rs
pfo/src/fund/: cli.rs  fund_info.rs  fund_stats.rs  info.rs  mod.rs  price_stats.rs
pfo/src/fund/models/: fund_info.rs  fund_stats.rs  mod.rs
pfo/src/portfolio/: cli.rs  fund_to_buy.rs  mod.rs  portfolio_dto.rs  portfolio_fund_add.rs  portfolio_fund_buy_prediction.rs  portfolio_update.rs  update.rs
pfo/src/portfolio/fund/: mod.rs  prediction.rs  price.rs  update.rs
pfo/src/portfolio/models/: fund_to_buy.rs  mod.rs  portfolio.rs
pfo_core/: Cargo.toml
pfo_core/src/: lib.rs  macros.rs  output.rs  sort.rs
pfo_derive/: Cargo.toml
pfo_derive/src/: attr.rs  item.rs  lib.rs
pfo_derive/src/derives/: mod.rs  table.rs
src/: config.rs  main.rs  output.rs  turkish.rs
src/cli/: args.rs  mod.rs
src/cli/commands/: fund.rs  portfolio.rs
src/client/: endpoints.rs  mod.rs  models.rs
src/client/endpoints/: fund.rs  portfolio.rs
src/client/models/: fund.rs  mod.rs
src/output/: mod.rs
