[package]
name = "pfo"
version.workspace = true
license.workspace = true
authors.workspace = true
edition.workspace = true

[dependencies]
pfo_core = { path = "../pfo_core" }

reqwest = { version = "0.12", default-features = false, features = ["json"] }
tokio = { version = "1.46", features = ["full"] }
clap = { version = "4.5", features = ["derive"] }
uuid = { version = "1.17", features = ["v4", "serde"] }

anyhow = { workspace = true }
chrono = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
