[package]
name = "pfo"
version.workspace = true
license.workspace = true
authors.workspace = true
edition.workspace = true

[dependencies]
pfo_core = { path = "../pfo_core" }
pfo_derive = { path = "../pfo_derive" }

reqwest = { version = "0.12", default-features = false, features = ["json"] }
tokio = { version = "1.46", features = ["full"] }

anyhow = { workspace = true }
chrono = { workspace = true }
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
