[package]
name = "pfo"
version.workspace = true
license.workspace = true
authors.workspace = true
edition.workspace = true

[dependencies]
pfo_core = { path = "../pfo_core" }
pfo_derive = { path = "../pfo_derive" }

reqwest = { version = "0.12", default-features = false, features = ["json"] }
tokio = { version = "1.46", features = ["full"] }

clap_complete = { version = "4.5.58" }
log = "0.4.28"
env_logger = "0.11.8"

anyhow = { workspace = true }
chrono = { workspace = true }
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
