[package]
name = "pfo_derive"
version.workspace = true
license.workspace = true
authors.workspace = true
edition.workspace = true

[lib]
proc-macro = true

[dependencies]
quote = "1.0.41"
proc-macro2 = "1.0.101"
syn = "2.0.106"

anyhow = { workspace = true }
chrono = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
